# Physics-Engine-Mag

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
cmake/: FindASSIMP.cmake  FindGLEW.cmake  FindSDL2.cmake
scripts/: Unix-Build.sh  Unix-BuildDebug.sh  Unix-Clean.sh
src/: main.cpp
src/components/: ballSpawnerComponent.h  physicsEngineComponent.h  physicsObjectComponent.h
src/core/: .clang-format  entity.h  entityComponent.h  math3d.h  timing.cpp
src/physics/: aabb.cpp  aabb.h  boundingSphere.cpp  boundingSphere.h  broadphase.cpp  broadphase.h  colliderComponent.cpp  colliderComponent.h  collisionDispatch.cpp  collisionDispatch.h  contactPoints.h  intersectData.h  obb.cpp  obb.h  obbCollision.cpp  obbCollision.h  physicsEngine.cpp  physicsEngine.h  physicsObject.cpp  physicsObject.h  plane.cpp  plane.h
src/rendering/: mesh.h  renderingEngine.cpp  renderingEngine.h  texture.cpp
tests/: test_angular.cpp  test_ccd.cpp  test_ccd_verification.cpp  test_collider_component.cpp  test_damping.cpp  test_friction.cpp  test_friction_verification.cpp  test_math3d.cpp  test_obb.cpp  test_physics.cpp  test_physics_engine.cpp  test_response.cpp  test_sleep.cpp
